--- a/HexEngine/test/CMakeLists.txt
+++ b/HexEngine/test/CMakeLists.txt
@@ -1,19 +1,14 @@
 cmake_minimum_required(VERSION 3.7)
 
-project(HexEngine)
+project(${PROJECT_NAME}_test)
 
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
-add_library(${PROJECT_NAME} ${SRC_FILES})
+add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 target_link_libraries(${PROJECT_NAME}
-	PUBLIC
-	sfml-graphics
-	sfml-window)
+	HexEngine)
 	
 target_include_directories(${PROJECT_NAME}
 	PUBLIC
-	src/Clickable
 	src)
-	
-add_subdirectory(test)
