--- a/HexEngine/CMakeLists.txt
+++ b/HexEngine/CMakeLists.txt
@@ -13,6 +13,8 @@ target_link_libraries(${PROJECT_NAME}
 	
 target_include_directories(${PROJECT_NAME}
 	PUBLIC
+	src/Coordinates
+	
 	src/Clickable
 	src)
 	
