added SFML fork as submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,9 @@
+project(gamestuff)
+
+cmake_minimum_required(VERSION 3.7)
+set(CMAKE_CXX_STANDARD 17)
+
+add_subdirectory(SFML)
+
 add_subdirectory(HexEngine)
 add_subdirectory(HexaGo)
