--- a/NetworkingPOC/client/CMakeLists.txt
+++ b/NetworkingPOC/client/CMakeLists.txt
@@ -7,7 +7,7 @@ file(GLOB_RECURSE SRC_FILES src/*.cpp)
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 target_link_libraries(${PROJECT_NAME}
-	sfml-network)
+	HexEngineNetwork)
 	
 target_include_directories(${PROJECT_NAME}
 	PUBLIC
