--- a/NetworkingPOC/lib/CMakeLists.txt
+++ b/NetworkingPOC/lib/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 3.7)
 
-project(NetworkingPOC_server)
+project(HexEngineNetwork)
 
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
 
-add_executable(${PROJECT_NAME} ${SRC_FILES})
+add_library(${PROJECT_NAME} ${SRC_FILES})
 
 target_link_libraries(${PROJECT_NAME}
-	HexEngineNetwork)
+	PUBLIC
+	sfml-network)
 	
 target_include_directories(${PROJECT_NAME}
 	PUBLIC
